--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,12 +4,12 @@
 #   The weight parameter defines the order that the links will appear in.
 
 [[main]]
-  name = "Home"
+  name = "Chi Sono"
   url = "#about"
   weight = 10
 
 [[main]]
-  name = "Posts"
+  name = "Blog"
   url = "#posts"
   weight = 20
 
@@ -19,12 +19,12 @@
   weight = 30
 
 [[main]]
-  name = "Publications"
+  name = "Newsletter"
   url = "#featured"
   weight = 40
 
 [[main]]
-  name = "Contact"
+  name = "Contatti"
   url = "#contact"
   weight = 60
 
